--- a/style.css
+++ b/style.css
@@ -1,5 +1,121 @@
-*
-{
- background-color: rgb(34, 33, 33);
-     
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,400&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    background-image: url(./pslH4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 100px;
+}
+
+.card {
+    background-color: #ffffff80;
+    padding: 40px;
+    border-radius: 5%;
+    box-shadow: 3px 3px 1px 0px #00000060;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #5d5a7a;
+}
+
+.label-float input {
+    width: 100%;
+    padding: 4px 4px;
+    display: inline-block;
+    border: 0;
+    border-bottom: 2px solid #5d5a7a;
+    background-color: transparent;
+    outline: none;
+    min-width: 180px;
+    font-size: 16px;
+    transition: all 0.3s ease-out;
+    border-radius: 0;
+}
+
+.label-float {
+    position: relative;
+    padding-top: 13px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.label-float input:focus {
+    border-bottom: 2px solid #4038a0;
+}
+
+.label-float label {
+    color: #5d5a7a;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 13px;
+    transition: all .3s ease-out;
+}
+
+.label-float input:focus+label {
+    font-size: 13px;
+    margin-top: 0;
+    color: #4038a0;
+}
+
+button {
+    background-color: transparent;
+    border-color: #00000060;
+    color: #5c50e4;
+    padding: 7px;
+    font-weight: bold;
+    font-size: 12pt;
+    margin-top: 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover {
+    background-color: #5d5a7a;
+    color: #fff;
+    transition: all .4s ease-out;
+}
+
+.justify-center {
+    display: flex;
+    justify-content: center;
+}
+
+hr {
+    margin-top: 10%;
+    margin-bottom: 10%;
+    width: 100%;
+}
+
+p {
+    color: #5d5a7a;
+    font-size: 14pt;
+    text-align: center;
+}
+
+a {
+    color: #4038a0;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #1c08ce80;
+    transition: all .3s ease-out;
 }
